--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/logonoback.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>khang-ma-poh</title>
+    <script src="/essentia-wasm.web.js"></script>
+    <script src="/essentia.js"></script>
   </head>
   <body>
     <div id="root"></div>
